# Desafio_Carrefour

./: README.md  analysis.py  authentication.py  connection.py  constants.py  docker-compose.yml  listener.py  main.py  pyproject.toml  responses.py  sentiment_analysis.py  services.py  tests.py
