[tool.poetry]
name = "desafio"
version = "0.1.0"
description = ""
authors = ["SEPalmiere <sergio.eduardo.palmiere@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^3.10.0"
pymongo = "^3.12.0"
fastapi = "^0.68.1"
pytest = "^6.2.5"
flake8 = "^3.9.2"
black = "^21.9b0"
isort = "^5.9.3"
Python123 = "^0.0.7"
no-thanks = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
